gccida/g2/emit_push_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:3718:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:3739:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:3761:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v46; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:3827:31: error: use of undeclared identifier 'machine_mode'
v41 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), args_addr, args_so_far); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:3872:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[v54].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:3886:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v52 = insn_data_0[v54].genfun( v47, xinnera); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:3886:30: error: called object type '<dependent type>' is not a function or function pointer
v52 = insn_data_0[v54].genfun( v47, xinnera); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:3917:18: error: use of undeclared identifier 'machine_mode'
convert_modes( ( machine_mode)( BYTE5( v55->block.abstract_origin) >> 1), VOIDmode, size, ( v56 & 0x20) != 0); 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:3939:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v65.rtwint = ( __int64)size->fld[0]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:3949:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v65.rtwint = ( __int64)size->fld[0]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:3969:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)size + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:3998:60: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( _WORD *)v17 == 61 && v17->fld[0].rtint <= 0x34u && mode_class_0[*( ( unsigned __int8 *)v17 + 2)] != MODE_INT ) 
                                                           ^~~~~~~~~~~~
                                                           mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:4009:18: error: invalid suffix 'xmode' on integer constant
v24 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:4012:31: error: invalid suffix 'orce' on integer constant
v26 = operand_sub*(short *)0xforce( v17, v23, mode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:4012:7: error: use of undeclared identifier 'operand_sub'
v26 = operand_sub*(short *)0xforce( v17, v23, mode); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:4030:31: error: invalid suffix 'orce' on integer constant
v29 = operand_sub*(short *)0xforce( v17, v27, mode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:4030:7: error: use of undeclared identifier 'operand_sub'
v29 = operand_sub*(short *)0xforce( v17, v27, mode); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:4033:31: error: invalid suffix 'xmode' on integer constant
v32 = gen_rtx_REG( *(short *)0xmode, v30); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/expr.c:4063:31: error: use of undeclared identifier 'machine_mode'
v34 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), args_addr, args_so_far); 
                              ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_push_insn/src/obj/expr.o] Error 1
